<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_reorder"
        />

    <item
        android:id="@+id/add_enemy_button"
        android:title="@string/add_enemy"
        android:icon="@drawable/ic_addenemy"
        />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_clear"
        />

    <item
        android:id="@+id/add_ally_button"
        android:title="@string/add_ally"
        android:icon="@drawable/ic_addally"
        />

    <item
        android:id="@+id/role_selector"
        android:title="@string/role_selector"
        android:icon="@drawable/ic_filter" />
</menu>
